@@ -4,6 +4,11 @@
 版权所有：湖南翱云网络科技有限公司
 ##########################################
 
+PbootCMS V1.3.7 build 2019-03-12
+1、修复部分情况数据库语句执行发生的错误不能正常显示的问题；
+2、修复搜索时表单传递字段控制被过滤掉的问题；
+3、新增多个搜索通过传递searchtpl字段自定义不同搜索结果页模板；
+
 PbootCMS V1.3.6 build 2019-01-12
 1、框架问题修复与优化;
 2、优化后台在线升级功能;
